# gpd340_re

./: .gitignore  README.md
kicad/: demo.kicad_sch  gpd350_re_schematics.kicad_prl  gpd350_re_schematics.kicad_pro  gpd350_re_schematics.kicad_sch
src/: CMakeLists.txt  bruteforcer.c  demo.c  font5x7_transposed.h  main.c
tests/: probing.ods
